@@ -3,11 +3,11 @@
 <form method="post" class="noborder">
 	<table cellpadding=2>
   <tr>
-    <td><%=_('Status')%>:<br /><%= search_filter_tag("issues.status_id") %></td>
-    <td><%=_('Tracker')%>:<br /><%= search_filter_tag("issues.tracker_id") %></td>
-    <td><%=_('Priority')%>:<br /><%= search_filter_tag("issues.priority_id") %></td>
-    <td><%=_('Category')%>:<br /><%= search_filter_tag("issues.category_id") %></td>
-    <td><%=_('Author')%>:<br /><%= search_filter_tag("issues.author_id") %></td>
+    <td><%=_('Status')%>:<br /><%= search_filter_tag("status_id") %></td>
+    <td><%=_('Tracker')%>:<br /><%= search_filter_tag("tracker_id") %></td>
+    <td><%=_('Priority')%>:<br /><%= search_filter_tag("priority_id") %></td>
+    <td><%=_('Category')%>:<br /><%= search_filter_tag("category_id") %></td>
+    <td><%=_('Assigned to')%>:<br /><%= search_filter_tag("assigned_to_id") %></td>
     <td valign="bottom">
       <%= submit_tag _('Apply filter') %>
       <%= end_form_tag %>
@@ -17,11 +17,13 @@
       <%= end_form_tag %>
     </td>
   </tr>
-	</table>
-  
-  &nbsp;
-		
+</table>
+ &nbsp;
 	<table border="0" cellspacing="1" cellpadding="2" class="listTableContent">
+	
+	   <tr><td colspan="7" align="right">
+	   <small><%= link_to 'Export to CSV', :action => 'export_issues_csv', :id => @project.id %></small>
+	   </td></tr>
 	
 		<tr class="ListHead">	
 			<%= sort_header_tag('issues.id', :caption => '#') %>
@@ -48,8 +50,8 @@
 	<p>
 	<%= pagination_links_full @issue_pages %>
 	[ <%= @issue_pages.current.first_item %> - <%= @issue_pages.current.last_item %> / <%= @issue_count %> ]
-	</p>
-	
+    </p>
+
 
 <p>
 <%= link_to_if_authorized '&#187; ' + _('Report an issue'), :controller => 'projects', :action => 'add_issue', :id => @project %>
