@@ -15,20 +15,25 @@
 <tr style="background-color:#CEE1ED">
   <td><%= link_to row.name, :controller => 'projects', :action => 'list_issues', :id => @project, 
                                                 :set_filter => 1, 
-                                                "issues.#{field_name}" => row.id %></td>
+                                                "#{field_name}" => row.id %></td>
   <% for status in @statuses %>
     <td align="center"><%= link_to (aggregate data, { field_name => row.id, "status_id" => status.id }), 
                                                 :controller => 'projects', :action => 'list_issues', :id => @project, 
                                                 :set_filter => 1, 
-                                                "issues.status_id" => status.id, 
-                                                "issues.#{field_name}" => row.id %></td>
+                                                "status_id" => status.id, 
+                                                "#{field_name}" => row.id %></td>
   <% end %>
-  <td align="center"><%= aggregate data, { field_name => row.id, "closed" => 0 } %></td>
+  <td align="center"><%= link_to (aggregate data, { field_name => row.id, "closed" => 0 }),
+                                                :controller => 'projects', :action => 'list_issues', :id => @project, 
+                                                :set_filter => 1, 
+                                                "#{field_name}" => row.id,
+                                                "status_id" => "O" %></td>
   <td align="center"><%= aggregate data, { field_name => row.id, "closed" => 1 } %></td>
   <td align="center"><%= link_to (aggregate data, { field_name => row.id }),
                                                 :controller => 'projects', :action => 'list_issues', :id => @project, 
                                                 :set_filter => 1, 
-                                                "issues.#{field_name}" => row.id %></td>  
+                                                "#{field_name}" => row.id,
+                                                "status_id" => "A" %></td>  
 <% end %>
 </tr>
 </table>
