@@ -5,6 +5,14 @@ Copyright (C) 2006  Jean-Philippe Lang
 http://redmine.sourceforge.net/
 
 
+== xx/xx/2006
+
+* More filter options in issues list
+* Issues list exportable to CSV
+* Fixed: Error on tables creation with PostgreSQL (rev5)
+* Fixed: SQL error in "issue reports" view with PostgreSQL (rev5)
+
+
 == 06/25/2006 - v0.1.0
 
 * multiple users/multiple projects
